# SpatiotemporalSCModel

./: LICENSE  README.md  pyproject.toml
sc_model/dataio/: __init__.py  dataio.py  natural_movie_loader.py  whitenoise_loader.py
sc_model/models/: __init__.py  ln_model.py  sc_model.py
sc_model/scripts/: run_ln_model.py  run_sc_model.py
sc_model/utils/: __init__.py  convolutions.py  gaussian.py  minimization.py  nonlinearities.py  project_variables.py  receptive_fields.py
